--- a/package.json
+++ b/package.json
@@ -1,50 +1,64 @@
 {
-  "name": "twitch-gaming-trend-monitor-backend",
+  "name": "twitch-gaming-trend-monitor-frontend",
   "version": "1.0.0",
-  "description": "Backend for Twitch Gaming Trend Monitor",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "db:migrate": "npx sequelize-cli db:migrate",
-    "db:seed": "npx sequelize-cli db:seed:all"
-  },
+  "description": "Frontend for Twitch Gaming Trend Monitor",
+  "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
     "axios": "^1.5.0",
-    "socket.io": "^4.7.2",
-    "pg": "^8.11.3",
-    "sequelize": "^6.32.1",
-    "redis": "^4.6.8",
-    "passport": "^0.6.0",
-    "passport-twitch": "^1.0.2",
-    "express-session": "^1.17.3",
-    "connect-redis": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "node-cron": "^3.0.2",
-    "sentiment": "^5.0.2",
-    "ws": "^8.14.2",
-    "express-rate-limit": "^6.10.0",
-    "morgan": "^1.10.0"
+    "socket.io-client": "^4.7.2",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^4.32.6",
+    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.274.0",
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "clsx": "^2.0.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-intersection-observer": "^9.5.2",
+    "framer-motion": "^10.16.4",
+    "recharts": "^2.8.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3",
-    "sequelize-cli": "^6.6.1"
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
   },
-  "keywords": [
-    "twitch",
-    "gaming",
-    "analytics",
-    "streaming",
-    "trends"
-  ],
-  "author": "Twitch Gaming Trend Monitor",
-  "license": "MIT"
+  "proxy": "http://localhost:5000"
 }
